--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <title>Trash</title>
-      <meta name="description" content="Hompage made with ❤️ by Isi.">
+      <meta name="description" content="Homepage made with ❤️ by Isi.">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta content="https://trash-gang.tk" property="og:url" />
       <meta content="https://media.discordapp.net/attachments/694198193549737994/921080418382524507/20211216_174437.png?width=676&height=676" property="og:image" />
