--- a/rpc.html
+++ b/rpc.html
@@ -6,7 +6,7 @@
         <title>Trash</title>
         <meta name="description" content="Discord Rich Presence Status ">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta content="https://trash-gang.tk" property="og:url" />
+        <meta content="https://trash-gang.tk/rpc.html" property="og:url" />
         <meta content="https://media.discordapp.net/attachments/694198193549737994/921080418382524507/20211216_174437.png?width=676&height=676" property="og:image" />
         <meta content="#607D8B" data-react-helmet="true" name="theme-color" />
         <link rel="stylesheet" href="./style.css">
