--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1>TrashCord</h1>
           </section>
           <section class="links">
-            <button onclick="location.href='soon.html'" type="button" id="github">Spiele</button>
+            <button onclick="location.href='soon.html'" type="button" id="github">TrashBot</button>
             <div class="divider"></div>
             <button onclick="location.href='https://discord.gg/56uaG3xmM7'" type="button" id="discord">Discord</button>
             <div class="divider"></div>
